@@ -182,6 +182,13 @@ if_alias_prefix=
 # default value is 0
 check_file_duplicate=0
 
+# file signature method for check file duplicate
+## hash: four 32 bits hash code
+## md5: MD5 signature
+# default value is hash
+# since V4.01
+file_signature_method=hash
+
 # namespace for storing file indexes (key-value pairs)
 # this item must be set when check_file_duplicate is true / on
 key_namespace=FastDFS
