@@ -106,10 +106,17 @@ static int storage_service_upload_file_done(struct fast_task_info *pTask);
 
 #define STORAGE_GEN_FILE_SIGNATURE(file_size, hash_codes, sig_buff) \
 	long2buff(file_size, sig_buff); \
-	int2buff(hash_codes[0], sig_buff+8);  \
-	int2buff(hash_codes[1], sig_buff+12); \
-	int2buff(hash_codes[2], sig_buff+16); \
-	int2buff(hash_codes[3], sig_buff+20); \
+	if (g_file_signature_method == STORAGE_FILE_SIGNATURE_METHOD_HASH) \
+	{ \
+		int2buff(hash_codes[0], sig_buff + 8);  \
+		int2buff(hash_codes[1], sig_buff + 12); \
+		int2buff(hash_codes[2], sig_buff + 16); \
+		int2buff(hash_codes[3], sig_buff + 20); \
+	} \
+	else \
+	{ \
+		memcpy(sig_buff + 8, hash_codes, 16);  \
+	}
 
 
 typedef struct
@@ -2379,6 +2386,7 @@ static int storage_service_upload_file_done(struct fast_task_info *pTask)
 		int value_len;
 		int nSigLen;
 		char szFileSig[FILE_SIGNATURE_SIZE];
+		char buff[64];
 
 		memset(&key_info, 0, sizeof(key_info));
 		key_info.namespace_len = g_namespace_len;
@@ -2389,6 +2397,9 @@ static int storage_service_upload_file_done(struct fast_task_info *pTask)
 
 		STORAGE_GEN_FILE_SIGNATURE(file_size, \
 				pFileContext->file_hash_codes, szFileSig)
+		bin2hex(szFileSig, FILE_SIGNATURE_SIZE, buff);
+		logInfo("file: "__FILE__", line: %d, " \
+			"file sig: %s", __LINE__, buff);
 
 		nSigLen = FILE_SIGNATURE_SIZE;
 		key_info.obj_id_len = nSigLen;
@@ -6889,7 +6900,14 @@ static int storage_write_to_file(struct fast_task_info *pTask, \
 
 	if (pFileContext->calc_file_hash)
 	{
-		INIT_HASH_CODES4(pFileContext->file_hash_codes)
+		if (g_file_signature_method == STORAGE_FILE_SIGNATURE_METHOD_HASH)
+		{
+			INIT_HASH_CODES4(pFileContext->file_hash_codes)
+		}
+		else
+		{
+			my_md5_init(&pFileContext->md5_context);
+		}
 	}
 
 	if ((result=storage_dio_queue_push(pTask)) != 0)
